wrote new const in main.js

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       </section>
 
       <section class="data">
-        <ul class="list">
+        <ul class="js-list list">
           <li class="card">
             <article>
               <img
