--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </header>
 
     <main>
-      <section class="js-new-form new-form collapsed">
+      <section class="js-new-form new-form">
         <h2 class="title">¿Agregamos un nuevo gatito a Adalab?</h2>
         <form class="form">
           <input
@@ -63,7 +63,7 @@
       <section class="search">
         <h2 class="title">Filtrar / Buscar</h2>
         <form class="form">
-          <input class="input" type="text" placeholder="Descripción" />
+          <input class="input js_in_search_desc" type="text" placeholder="Descripción" />
           <input
             class="input"
             type="select"
