--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <h1>AdaKitten</h1>
         <nav class="menu-nav">
           <ul class="menu">
-            <li class="item">
+            <li class="item js-item">
               <span class="fas fa-plus-circle"> </span>
             </li>
           </ul>
@@ -41,16 +41,16 @@
         <h2 class="title">¿Agregamos un nuevo gatito a Adalab?</h2>
         <form class="form">
           <input
-            class="input"
+            class="input js-input-photo"
             type="text"
             placeholder="Url de la foto"
             required
           />
-          <input class="input" type="text" placeholder="Nombre" required />
+          <input class="input js-input-name" type="text" placeholder="Nombre" required />
           <input class="input" type="text" placeholder="Raza" />
-          <input class="input" type="text" placeholder="Descripción" required />
-          <label class=""></label>
-          <button class="button">Añadir</button>
+          <input class="input js-input-desc" type="text" placeholder="Descripción" required />
+          <label class="js-label-error"></label>
+          <button class="button js-btn-add">Añadir</button>
           <button class="button-cancel">Cancelar</button>
         </form>
       </section>
@@ -65,14 +65,14 @@
         <form class="form">
           <input class="input js_in_search_desc" type="text" placeholder="Descripción" />
           <input
-            class="input"
+            class="input js_in_search_race"
             type="select"
             name="raza"
             placeholder="Raza"
             id="raza"
           />
-
-          <button class="button">Buscar</button>
+          <label class="js-label-error-srch"></label>
+          <button class="button js-btn-srch">Buscar</button>
         </form>
       </section>
 
